--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+#spinner{
+  width: 100%;
+  margin-top: 200px;
+  text-align: center;
+}
+
+}
+
+header{
+    border-bottom: thin solid #ff0000;
+    margin-bottom: 20px;
+}
+
+#logo{
+  background-image: url('http://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/BBC_logo_(70s).svg/517px-BBC_logo_(70s).svg.png');
+  background-size: 150px 80px;
+  background-repeat: no-repeat;
+  height: 100px;
+  border-bottom: thin solid #D3D3D3;
+}
 
 #container {
   width: 1040px;
@@ -12,13 +32,6 @@
   background-color: black;
   border-radius: 5px;
   color: white;
-}
-
-#logo{
-  background-image: url('http://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/BBC_logo_(70s).svg/517px-BBC_logo_(70s).svg.png');
-  background-size: 150px 80px;
-  background-repeat: no-repeat;
-  height: 100px;
 }
 
 #programmes li {
